iptables/files/iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:LOGDROP - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p udp --dport 5670 -j ACCEPT
-A INPUT -p tcp --dport 5670 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80,443 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 4505,4506 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j LOGDROP
-A FORWARD -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1/sec -j ACCEPT
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK RST -m limit --limit 1/sec -j ACCEPT
-A FORWARD -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
-A LOGDROP -p tcp -m limit --limit 1/sec --limit-burst 4 -j LOG --log-prefix "LOGDROP TCP: "
-A LOGDROP -p udp -m limit --limit 1/sec --limit-burst 4 -j LOG --log-prefix "LOGDROP UDP: "
-A LOGDROP -p icmp -m limit --limit 1/sec --limit-burst 4 -j LOG --log-prefix "LOGDROP ICMP: "
-A LOGDROP -f -m limit --limit 1/sec --limit-burst 4 -j LOG --log-prefix "LOGDROP FRAGMENT: "
-A LOGDROP -j DROP
COMMIT
